# barter-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.agent/: plan.md  porting-plan.md  prompt.md  system-control-notes.md  todo.md
.agent/specs/: barter-data.md  cross-language-maintenance.md  drawdown-analytics.md  integration-snapshot-bindings.md  portfolio-analytics.md  python-account-event-bindings.md  python-account-snapshot-bindings.md  python-audit-streams.md  python-audit-tick-bindings.md  python-backtest-bindings.md  python-backtest-port.md  python-collection-bindings.md  python-dynamic-streams.md  python-engine-action-output-bindings.md  python-engine-output-bindings.md  python-engine-port.md  python-execution-balance-bindings.md  python-execution-ids.md  python-execution-instrument-map.md  python-execution-trade-bindings.md  python-index-wrappers.md  python-indexed-instruments-bindings.md  python-initial-balances.md  python-instrument-name-bindings.md  python-instrument-spec-bindings.md  python-integration-tests.md  python-market-stream-event-bindings.md  python-marketdata-bindings.md  python-mock-execution-bindings.md  python-mock-execution-client.md  python-order-enum-bindings.md  python-order-event-bindings.md  python-packaging-automation.md  python-release-checklist.md  python-risk-bindings.md  python-sequence-bindings.md  python-socket-error-bindings.md  python-statistic-port.md  python-strategy-bindings.md  python-system-feed-mode.md  (+3 more)
.github/workflows/: ci.yml  python-wheels.yml
barter/: Cargo.toml  README.md
barter-data/: Cargo.toml
barter-data/src/: lib.rs
barter-data/src/exchange/binance/futures/: l2.rs
barter-data/src/exchange/binance/spot/: l2.rs
barter-data/src/streams/builder/dynamic/: indexed.rs  mod.rs
barter-execution/src/: map.rs
barter-integration/: Cargo.toml
barter-integration/src/: lib.rs
barter-python/: Cargo.toml  Makefile  README.md  README_new.md  benchmarks.py  pyproject.toml  trading_summary.json
barter-python/examples/: analytics_demo.py  backtest_cli.py  comprehensive_backtest_example.py  live_system_simulation.py  multi_exchange_backtest.py  order_lifecycle_example.py  risk_management_example.py  statistical_trading_summary.py
barter-python/python/barter_python/: __init__.py  backtest.py  data.py  engine.py  execution.py  instrument.py  integration.py  risk.py  statistic.py  strategy.py  trade_bindings.py
barter-python/python/barter_python_cli/: __init__.py  backtest.py
barter-python/src/: account.rs  analytics.rs  backtest.rs  books.rs  collection.rs  command.rs  common.rs  config.rs  data.rs  error.rs  execution.rs  instrument.rs  integration.rs  lib.rs  lib.rs.backup  logging.rs  metric.rs  risk.rs  strategy.rs  summary.rs  system.rs
barter-python/src/classes/: core.rs  engine.rs  mod.rs
barter-python/tests/: python_smoke.rs
barter-python/tests_py/: conftest.py  test_backtest.py  test_bindings.py  test_books.py  test_cli_entry.py  test_cli_example.py  test_collection.py  test_data.py  test_dynamic_streams.py  test_engine.py  test_examples.py  test_execution.py  test_indexed_instruments.py  test_initial_balances.py  test_instrument.py  test_integration.py  test_integration_backtest.py  test_integration_commands.py  test_integration_failures.py  test_integration_live.py  test_metric.py  test_order_event_bindings.py  test_portfolio_metrics.py  test_risk.py  test_risk_config.py  test_socket_error.py  test_statistic.py  test_strategy.py  test_subscription_support.py  test_summary_generator.py  test_system_feed_mode.py  test_trade_bindings.py
barter-python/tests_py/data/: synthetic_market_data.json
barter/benches/backtest/: mod.rs
barter/examples/: backtests_concurrent.rs  engine_async_with_historic_market_data_and_mock_execution.rs  engine_sync_with_audit_replica_engine_state.rs  engine_sync_with_live_market_data_and_mock_execution_and_audit.rs  engine_sync_with_multiple_strategies.rs  engine_sync_with_risk_manager_open_order_checks.rs  statistical_trading_summary.rs
barter/src/: lib.rs
barter/src/engine/: clock.rs
barter/src/engine/state/: position.rs
barter/src/statistic/: algorithm.rs
barter/src/system/: config.rs
barter/tests/: test_engine_process_engine_event_with_audit.rs
docs/: developer-onboarding.md
scripts/: test-all.sh
