[package]
name = "barter-python"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"
readme = "README.md"
description = "Python bindings for the Barter trading engine"

[lib]
name = "barter_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-tests = []

[dependencies]
barter = { path = "../barter" }
barter-integration = { path = "../barter-integration" }
barter-data = { path = "../barter-data" }
barter-instrument = { path = "../barter-instrument" }
barter-execution = { path = "../barter-execution" }
pyo3 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
