[package]
name = "barter-python"
version = "0.1.2"
edition = "2024"
publish = false
license = "MIT"
readme = "README.md"
description = "Python bindings for the Barter trading engine"

[lib]
name = "barter_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
python-tests = ["extension-module"]

[dependencies]
barter = { path = "../barter" }
barter-integration = { path = "../barter-integration" }
barter-data = { path = "../barter-data" }
barter-instrument = { path = "../barter-instrument" }
 barter-execution = { path = "../barter-execution" }
 pyo3 = { workspace = true }
  pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
vecmap-rs = { workspace = true }
fnv = { workspace = true }
smol_str = { workspace = true }
