[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "barter-python"
version = "0.1.1"
description = "Python bindings for the Barter trading engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "barter-rs maintainers" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["trading", "algorithmic", "finance", "rust", "bindings"]

[project.urls]
Homepage = "https://github.com/barter-rs/barter-rs"
Documentation = "https://docs.rs/barter/latest/barter/"
Repository = "https://github.com/barter-rs/barter-rs"

[project.optional-dependencies]
test = [
    "pytest>=8.3",
]

[project.scripts]
barter-backtest = "barter_python_cli.backtest:main"

[tool.maturin]
bindings = "pyo3"
module-name = "barter_python"
features = ["extension-module"]
python-source = "python"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests_py"]
markers = [
    "integration: end-to-end engine lifecycle scenarios",
]
